--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -14,7 +14,6 @@ body {
   height: 100%;
   font-family: "Lora", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: white;
-  background-color:#3E453F ;
 }
 html {
   width: 100%;
@@ -318,3 +317,57 @@ img::-moz-selection {
 body {
   webkit-tap-highlight-color: rgba(255, 255, 255, 0.2);
 }
+/* Signup Form */
+
+  #signup-form {
+    display: -moz-flex;
+    display: -webkit-flex;
+    display: -ms-flex;
+    display: flex;
+    position: relative;
+  }
+
+    #signup-form input[type="text"],
+    #signup-form input[type="password"],
+    #signup-form input[type="email"] {
+      width: 18em;
+    }
+
+    #signup-form > * {
+      margin: 0 0 0 1em;
+    }
+
+    #signup-form > :first-child {
+      margin: 0 0 0 0;
+    }
+
+    @media screen and (max-width: 480px) {
+
+      #signup-form {
+        -moz-flex-direction: column;
+        -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+        flex-direction: column;
+      }
+
+        #signup-form input[type="type"],
+        #signup-form input[type="password"],
+        #signup-form input[type="email"] {
+          width: 100%;
+        }
+
+        #signup-form > * {
+          margin: 1.25em 0 0 0;
+        }
+
+        #signup-form .message {
+          bottom: -1.5em;
+          font-size: 0.9em;
+          height: 1em;
+          left: 0;
+          line-height: inherit;
+          margin-top: 0;
+          position: absolute;
+        }
+
+    }
